--- a/Notebooks/Application_ANN_V1.ipynb
+++ b/Notebooks/Application_ANN_V1.ipynb
@@ -1191,6 +1191,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.4.3\n",
+      "2.3.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import keras as k\n",
+    "# import tensorflow as tf\n",
+    "# print(k.__version__)\n",
+    "# print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.8.3\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !python --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.8.3 (default, Jul  2 2020, 11:26:31) \n",
+      "[Clang 10.0.0 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import sys\n",
+    "# print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import darts\n",
+    "print(darts.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
