adding presentation deck

--- a/Notebooks/Application_GAN_V1.ipynb
+++ b/Notebooks/Application_GAN_V1.ipynb
@@ -50,6 +50,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Reference: https://genforce.github.io/idinvert/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Import Relevant libraries**"
    ]
   },
